# docver-sdk-python

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.semaphore/: semaphore.yml
.semaphore/python/: pypi-publish.yml
dataspike/: __init__.py  common.py  dataspike.py  errors.py  syncapi.py  utils.py
dataspike/aml/: aml.py  model.py
dataspike/applicants/: applicants.py  model.py
dataspike/documents/: documents.py  model.py
dataspike/verifications/: model.py  verifications.py
examples/payloads/: README.md
examples/payloads/webhooks/: aml_screening_low_risk.json  aml_screening_medium_risk.json  docver_webhook_failed.json  docver_webhook_verified.json
go/: .gitignore  go.mod
go/dataspike/: dataspike.go  dataspike_test.go  models.go
python/: .gitignore  README.md  pyproject.toml
python/dataspike/: __init__.py  __version__.py  common.py  dataspike.py  resource.py  syncapi.py  utils.py  version.py
python/dataspike/aml/: model.py
python/dataspike/applicants/: applicants.py  model.py  resource.py
python/dataspike/documents/: documents.py  model.py  resource.py
python/dataspike/sdk/: resource.py  sdk.py
python/dataspike/verifications/: model.py  resource.py  verifications.py
python/tests/: conftest.py  test_aml.py  test_applicants.py  test_documents.py  test_sdk.py  test_sync.py  test_verification_model.py  test_verifications.py
tests/: conftest.py  test_aml.py  test_applicants.py  test_documents.py  test_json_encoder.py  test_sync.py  test_verifications.py
