[tool.pdm]
[tool.pdm.scripts]
fmt = "black dataspike tests"
lint = "flake8 dataspike"
type-check = "pyright dataspike"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.flake8]
ignore = []
per-file-ignores = [
    '__init__.py:F401,F403',
]
max-line-length = 120
count = true


[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.1",
    "black>=23.1.0",
    "pytest-black>=0.3.12",
    "flake8>=5.0.4",
    "pyright>=1.1.294",
    "flake8-pyproject>=1.2.2",
    "aioresponses>=0.7.4",
]

[project]
name = "dataspike"
version = "0.1.0"
description = "The official wrapper for Dataspike API"
authors = [
    {name = "Sergey Rublev", email = "sergey.rublev@dataspike.io"},
]
dependencies = [
    "pydantic>=1.10.5",
    "aiohttp[speedups]>=3.8.4",
    "pytest-aioresponses>=0.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
