[tool.pdm]
[tool.pdm.scripts]
fmt = "black dataspike tests"
lint = "ruff dataspike tests"
type-check = "pyright ."
fmt-with-checks = {shell = "black dataspike tests; ruff dataspike tests; pyright ."}
ci-checks = {shell = "black --check . && ruff dataspike tests && pytest --junitxml=results.xml . && pyright ."}

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401","F403"]
"conftest.py" = ["F403","F405"]



[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.1",
    "black>=23.1.0",
    "pytest-black>=0.3.12",
    "pyright>=1.1.294",
    "aioresponses>=0.7.4",
    "ruff>=0.0.247",
]

[project]
name = "dataspike"
dynamic = ["version"]
description = "The official wrapper for Dataspike API"
authors = [
    {name = "Sergey Rublev", email = "sergey.rublev@dataspike.io"},
]
dependencies = [
    "pydantic>=1.10.5",
    "aiohttp[speedups]>=3.8.4",
    "pytest-aioresponses>=0.2.0",
    "filetype>=1.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "dataspike/version.py"
write_template = "_version = '{}'"

[tool.pdm.build]