[project]
name = "dataspike"
dynamic = ["version"]
description = "The official wrapper for Dataspike API"
authors = [
    {name = "Sergey Rublev", email = "sergey.rublev@dataspike.io"},
]
dependencies = [
    "pydantic>=1.10.5",
    "aiohttp[speedups]>=3.8.4",
    "filetype>=1.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["dataspike", "kyc", "identity"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers"
]
[project.urls]
Homepage = "https://dataspike.io"
Repository = "github.com/dataspike-io/docver-sdk"
Documentation = "https://docs.dataspike.io"

[tool.pdm]
[tool.pdm.scripts]
fmt = "black dataspike tests"
lint = "ruff dataspike tests"
type-check = "pyright ."
fmt-with-checks = {shell = "black dataspike tests && ruff dataspike tests && pyright . && pytest ."}
ci-checks = {shell = "black --check . && ruff dataspike tests && pytest --junitxml=results.xml . && pyright ."}

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py39" # minimal supported version
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401","F403"]
"conftest.py" = ["F403","F405"]


[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.1",
    "black>=23.1.0",
    "pytest-black>=0.3.12",
    "pyright>=1.1.294",
    "aioresponses>=0.7.4",
    "pytest-aioresponses>=0.2.0",
    "ruff>=0.0.247",
    "pydantic-factories>=1.17.2"
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "scm"
write_to = "dataspike/VERSION"


[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "."
includes = ["dataspike"]
source-includes = ["tests", "README.md"]
editable-backend = "path"
is-purelib = true